# noise-gourmet

./: Cargo.toml  README.md
docs/: index.html  noise_gourmet.js  noise_gourmet_bg.wasm
src/: app.rs  lib.rs  main.rs  noise_graph.rs  template_app.rs
src/noise/: mod.rs  noise_generator.rs  noise_graph.rs
