[package]
name = "noise-gourmet"
version = "0.1.0"
authors = ["Vincent Riesop <Vincent.Riesop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.13.0" # Gives us egui, epi and web+native backends
egui = { version = "0.13.0", default-features = false }
epi = { version = "0.13.0"}
unicode_names2 = { version = "0.4.0", default-features = false }

serde = { version = "1", features = ["derive"], optional = true }

# feature "http":
image = { version = "0.23", default-features = false, features = ["jpeg", "png"], optional = true }

# feature "syntax_highlighting":
syntect = { version = "4", default-features = false, features = ["default-fancy"], optional = true }

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
